Fix spacing in widgets

--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -30,6 +30,13 @@
 	}
 }
 
+.widget {
+	.loop-container {
+		padding: 0;
+		margin: 0;
+	}
+}
+
 .custom-loop-container {
 	.entry {
 		margin: 0;
